@startuml

title __DESPRES1's Class Diagram__\n

  namespace despres1 {
    abstract class despres1.CalculadoraPreuVol {
        - moneda : String
        + CalculadoraPreuVol()
        {abstract} + calcularVol()
        + getMoneda()
    }
  }
  

  namespace despres1 {
    class despres1.Client1 {
        {static} + main()
    }
  }
  

  namespace despres1 {
    class despres1.VolIllesCalculator {
        + VolIllesCalculator()
        + calcularVol()
    }
  }
  

  namespace despres1 {
    class despres1.VolInternacionalCalculator {
        + VolInternacionalCalculator()
        + calcularVol()
    }
  }
  

  namespace despres1 {
    class despres1.VolNacionalCalculator {
        + VolNacionalCalculator()
        + calcularVol()
    }
  }
  

  despres1.VolIllesCalculator -up-|> despres1.CalculadoraPreuVol
  despres1.VolInternacionalCalculator -up-|> despres1.CalculadoraPreuVol
  despres1.VolNacionalCalculator -up-|> despres1.CalculadoraPreuVol
despres1.Client1 --> despres1.CalculadoraPreuVol: usa

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
